@@ -3,17 +3,17 @@
 -- Change Log  :
 
 -- Check Version
-local version = 1
+local version = 2
 if not IGAS:NewAddon("IGAS.Widget.Unit.TotemBar", version) then
 	return
 end
 
-__Doc__[[The totem bar]]
-class "TotemBar"
-	inherit "LayoutPanel"
-	extend "IFTotem"
+MAX_TOTEMS = _G.MAX_TOTEMS
 
-	MAX_TOTEMS = _G.MAX_TOTEMS
+__Doc__[[The common totem bar]]
+class "TotemBar"
+	inherit "ElementPanel"
+	extend "IFTotem"
 
 	-----------------------------------------------
 	--- Totem
@@ -23,11 +23,20 @@ class "TotemBar"
 		extend "IFCooldownIndicator"
 
 		_Border = {
-		    edgeFile = [[Interface\ChatFrame\CHATFRAMEBACKGROUND]],
-		    edgeSize = 2,
+			edgeFile = [[Interface\ChatFrame\CHATFRAMEBACKGROUND]],
+			edgeSize = 2,
 		}
 
 		_BorderColor = ColorType(0, 0, 0)
+
+		------------------------------------------------------
+		-- Method
+		------------------------------------------------------
+		function SetUpCooldownIndicator(self, indicator)
+			indicator:SetHideCountdownNumbers(true)
+			indicator:SetPoint("TOPLEFT", 2, -2)
+			indicator:SetPoint("BOTTOMRIGHT", -2, 2)
+		end
 
 		------------------------------------------------------
 		-- Property
@@ -39,15 +48,10 @@ class "TotemBar"
 			end,
 			Set = function(self, value)
 				self:GetChild("Icon").TexturePath = value
+				if value then self:GetChild("Icon"):SetTexCoord(0.1, 0.9, 0.1, 0.9) end
 			end,
 			Type = String,
 		}
-
-		local function OnClick(self)
-			if self.Slot then
-				DestroyTotem(self.Slot)
-			end
-		end
 
 		local function UpdateTooltip(self)
 			self = IGAS:GetWrapper(self)
@@ -70,17 +74,16 @@ class "TotemBar"
 		------------------------------------------------------
 		-- Constructor
 		------------------------------------------------------
-	    function Totem(self, name, parent, ...)
-    		Super(self, name, parent, ...)
+		function Totem(self, ...)
+			Super(self, ...)
 
-			self.Visible = false
-			self:SetSize(36, 36)
+			self.MouseEnabled = true
 
 			self:RegisterForClicks("RightButtonUp")
 
 			local icon = Texture("Icon", self, "BACKGROUND")
-			icon:SetPoint("TOPLEFT", 1, -1)
-			icon:SetPoint("BOTTOMRIGHT", -1, 1)
+			icon:SetPoint("TOPLEFT", 2, -2)
+			icon:SetPoint("BOTTOMRIGHT", -2, 2)
 
 			self.Backdrop = _Border
 			self.BackdropBorderColor = RAID_CLASS_COLORS[select(2, UnitClass("player"))]
@@ -88,8 +91,27 @@ class "TotemBar"
 			self.OnEnter = self.OnEnter + OnEnter
 			self.OnLeave = self.OnLeave + OnLeave
 			IGAS:GetUI(self).UpdateTooltip = UpdateTooltip
-	    end
+		end
 	endclass "Totem"
+
+	------------------------------------------------------
+	-- Method
+	------------------------------------------------------
+	function SetTotemByIndex(self, index, haveTotem, name, start, duration, icon)
+		local btn = self.Element[index]
+
+		if btn then
+			if haveTotem and duration > 0 then
+				btn.Icon = icon
+				btn:OnCooldownUpdate(start, duration)
+
+				btn.Visible = true
+			else
+				btn:OnCooldownUpdate()
+				btn.Visible = false
+			end
+		end
+	end
 
 	------------------------------------------------------
 	-- Constructor
@@ -97,24 +119,152 @@ class "TotemBar"
 	function TotemBar(self, name, parent, ...)
 		Super(self, name, parent, ...)
 
-		local pct = floor(100 / MAX_TOTEMS)
-		local margin = (100 - pct * MAX_TOTEMS) / 2
-
 		self.FrameStrata = "LOW"
-		self.Toplevel = true
-		self:SetSize(108, 24)
+		self.KeepMaxSize = true
+		self.ColumnCount = MAX_TOTEMS
+		self.RowCount = 1
+		self.ElementWidth = 24
+		self.ElementHeight = 24
+		self.HSpacing = 2
+		self.VSpacing = 2
+		self.MouseEnabled = false
+		self.MouseWheelEnabled = false
+		self.ElementType = Totem
 
-		local btnTotem
-
-		for i = 1, MAX_TOTEMS do
-			btnTotem = Totem("Totem"..i, self)
-			btnTotem.ID = i
-
-			self:AddWidget(btnTotem)
-
-			self:SetWidgetLeftWidth(btnTotem, margin + (i-1)*pct, "pct", pct-1, "pct")
-
-			self[i] = btnTotem
+		for i, v in ipairs(IFTotem.TotemSlotMap) do
+			self.Element[i].Slot = v
 		end
 	end
 endclass "TotemBar"
+
+__Doc__[[The common totem bar]]
+class "SecureTotemBar"
+	inherit "SecureFrame"
+	extend "IFSecurePanel"
+	extend "IFTotem"
+
+	-----------------------------------------------
+	--- Totem
+	-- -- -----------------------------------------------
+	class "SecureTotem"
+		inherit "SecureButton"
+		extend "IFCooldownIndicator"
+
+		_Border = {
+			edgeFile = [[Interface\ChatFrame\CHATFRAMEBACKGROUND]],
+			edgeSize = 2,
+		}
+
+		_BorderColor = ColorType(0, 0, 0)
+
+		------------------------------------------------------
+		-- Method
+		------------------------------------------------------
+		function SetUpCooldownIndicator(self, indicator)
+			indicator:SetHideCountdownNumbers(true)
+			indicator:SetPoint("TOPLEFT", 2, -2)
+			indicator:SetPoint("BOTTOMRIGHT", -2, 2)
+		end
+
+		------------------------------------------------------
+		-- Property
+		------------------------------------------------------
+		-- Icon
+		property "Icon" {
+			Get = function(self)
+				return self:GetChild("Icon").TexturePath
+			end,
+			Set = function(self, value)
+				self:GetChild("Icon").TexturePath = value
+				if value then self:GetChild("Icon"):SetTexCoord(0.1, 0.9, 0.1, 0.9) end
+			end,
+			Type = String,
+		}
+
+		local function UpdateTooltip(self)
+			self = IGAS:GetWrapper(self)
+			if self.Slot and self.Alpha > 0 then
+				IGAS.GameTooltip:SetTotem(self.Slot)
+			else
+				IGAS.GameTooltip:Hide()
+			end
+		end
+
+		local function OnEnter(self)
+			if self.Visible and self.Slot then
+				IGAS.GameTooltip:SetOwner(self, "ANCHOR_BOTTOMRIGHT")
+				UpdateTooltip(self)
+			end
+		end
+
+		local function OnLeave(self)
+			IGAS.GameTooltip:Hide()
+		end
+
+		------------------------------------------------------
+		-- Constructor
+		------------------------------------------------------
+		function SecureTotem(self, ...)
+			Super(self, ...)
+
+			self.MouseEnabled = true
+			self:RegisterForClicks("RightButtonUp")
+
+			local icon = Texture("Icon", self, "BACKGROUND")
+			icon:SetPoint("TOPLEFT", 2, -2)
+			icon:SetPoint("BOTTOMRIGHT", -2, 2)
+
+			self.Backdrop = _Border
+			self.BackdropBorderColor = RAID_CLASS_COLORS[select(2, UnitClass("player"))]
+
+			self.OnEnter = self.OnEnter + OnEnter
+			self.OnLeave = self.OnLeave + OnLeave
+			IGAS:GetUI(self).UpdateTooltip = UpdateTooltip
+		end
+	endclass "SecureTotem"
+
+	------------------------------------------------------
+	-- Method
+	------------------------------------------------------
+	function SetTotemByIndex(self, index, haveTotem, name, start, duration, icon)
+		local btn = self.Element[index]
+
+		if btn then
+			if haveTotem and duration > 0 then
+				btn.Icon = icon
+				btn:OnCooldownUpdate(start, duration)
+
+				btn.Alpha = 1
+			else
+				btn:OnCooldownUpdate()
+				btn.Alpha = 0
+			end
+		end
+	end
+
+	------------------------------------------------------
+	-- Constructor
+	------------------------------------------------------
+	function SecureTotemBar(self, name, parent, ...)
+		Super(self, name, parent, ...)
+
+		self.FrameStrata = "LOW"
+		self.KeepMaxSize = true
+		self.ColumnCount = MAX_TOTEMS
+		self.RowCount = 1
+		self.ElementWidth = 24
+		self.ElementHeight = 24
+		self.HSpacing = 2
+		self.VSpacing = 2
+		self.MouseEnabled = false
+		self.MouseWheelEnabled = false
+		self.ElementType = SecureTotem
+
+		for i, v in ipairs(IFTotem.TotemSlotMap) do
+			self.Element[i].Slot = v
+
+			self.Element[i]:SetAttribute("type", "destroytotem")
+			self.Element[i]:SetAttribute("totem-slot", v)
+		end
+	end
+endclass "SecureTotemBar"
